--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,71 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+
+ion-app.ios,
+ion-app.md,
+ion-add.wp {
+  font-family: 'Roboto', sans-serif;
+}
+
+ion-grid,
+ion-row,
+ion-col {
+  padding: 0;
+  .inner {
+    padding: 5px;
+  }
+}
+
+h2 {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin: 26px 0 19px;
+}
+
+h3 {
+  font-size: 14px;
+  margin: 9px 0 3px;
+}
+
+.center {
+  display: block;
+  text-align: center;
+}
+
+.divider {
+  border: solid 1px rgba(150, 150, 150, 0.2);
+}
+
+.link {
+  text-transform: uppercase;
+}
+
+.link--large {
+  margin: 26px 0;
+}
+
+ion-header {
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.06);
+	border: solid 1px rgba(184, 184, 184, 0.35);
+  img {
+    padding: 14px 21px;
+    border-bottom: 2px solid #23221e;
+  }
+}
+
+.has-title .tab-button-text {
+  display: none;
+}
+
+gopc-ad {
+  display: block;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.06);
+  border: solid 1px rgba(184, 184, 184, 0.35);
+}
