--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,11 +24,11 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:    #3E79C7,
+  secondary:  #CFB392,
+  danger:     #DE6473,
+  light:      #CFB392,
+  dark:       #23221e
 );
 
 
