--- a/src/pages/brewery/brewery.scss
+++ b/src/pages/brewery/brewery.scss
@@ -1,3 +1,14 @@
 page-brewery {
 
 }
+
+.brewery-info {
+  padding: 7px 13px 9px;
+  border-radius: 5px;
+  border: solid 1px #b8b8b8;
+  margin: 6px 4px;
+  strong,
+  small{
+    display: block;
+  }
+}
