--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -64,9 +64,11 @@ h3 {
 ion-header {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.06);
 	border: solid 1px rgba(184, 184, 184, 0.35);
+  background: #FFFFFF;
   img {
     padding: 14px 21px;
     border-bottom: 2px solid #23221e;
+    float: left;
   }
 }
 
