--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -55,6 +55,7 @@ h3 {
 
 .divider {
   border: solid 1px rgba(150, 150, 150, 0.2);
+  padding-bottom: 26px;
 }
 
 .link {
@@ -62,7 +63,7 @@ h3 {
 }
 
 .link--large {
-  margin: 26px 0;
+  margin: 26px 0 0;
 }
 
 ion-header {
