--- a/src/pages/nearby/nearby.scss
+++ b/src/pages/nearby/nearby.scss
@@ -1,3 +1,25 @@
 page-nearby {
 
 }
+
+.nearby-selector {
+  margin: 0 auto;
+  margin: 6px 12px;
+  padding: 5px;
+  border: 1px solid rgba(150, 150, 150, 0.2);
+  border-radius: 3px;
+  text-align: center;
+  vertical-align: baseline;
+  ion-icon,
+  ion-select {
+    display: inline-block;
+    padding: 0;
+  }
+  .select-text {
+    font-weight: 700;
+    padding: .2em 0 0 10px;
+  }
+  .select-icon {
+    display: none;
+  }
+}
