add single guide component

--- a/src/pages/nearby/nearby.scss
+++ b/src/pages/nearby/nearby.scss
@@ -14,6 +14,7 @@ page-nearby {
   ion-select {
     display: inline-block;
     padding: 0;
+    position: relative;
   }
   .select-text {
     font-weight: 700;
