--- a/src/pages/feedback/feedback.scss
+++ b/src/pages/feedback/feedback.scss
@@ -1,3 +1,10 @@
 page-feedback {
 
+  textarea {
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.06);
+    border: solid 1px rgba(184, 184, 184, 0.35);
+    width: 100%;
+    height: 20vh;
+  }
+
 }
