--- a/src/pages/brewery/brewery.scss
+++ b/src/pages/brewery/brewery.scss
@@ -49,3 +49,38 @@ button.brewery-info {
   margin: 15px 0 20px;
   height: 30vh;
 }
+
+.rating-mask {
+  display: inline-block;
+  img {
+    position: relative;
+    z-index: 2;
+  }
+}
+
+.rating-val {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  line-height: .8;
+  background-color: #D8D8D8;
+  &:after {
+    content: '';
+    background-image: url('/assets/img/starmask.svg');
+    background-size: cover;
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    bottom: -1px;
+    right: -1px;
+  }
+  .rating-valInner {
+    background: map-get($colors, light);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 50%;
+  }
+}
