connect signin/signup to api

--- a/src/components/gopc-ad/gopc-ad.html
+++ b/src/components/gopc-ad/gopc-ad.html
@@ -6,7 +6,7 @@
     <ion-col width-67>
       <h3>Beer NC is brought to you by Great Outdoor Provision Co</h3>
       <p>Enjoy all that NC has to offer</p>
-      <a href="#">Closest location 5 miles again</a>
+      <a href="#">Closest location 5 miles away</a>
       <!-- TODO: figure out what this is -->
     </ion-col>
   </ion-row>
