refactor header as component

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -132,3 +132,15 @@ gopc-ad {
     width: auto;
   }
 }
+
+.imgWrapper {
+  height: 100px;
+  background: grey;
+  border: 1px solid white;
+  overflow: none;
+  img {
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+  }
+}
