update version number

--- a/src/pages/splash/splash.scss
+++ b/src/pages/splash/splash.scss
@@ -1,6 +1,6 @@
 page-splash {
   ion-content {
-    background-image: url('/assets/img/splash.jpg');
+    background-image: url('assets/img/splash.jpg');
     background-size: cover;
   }
   + page-tabs .tabbar {
