add guides archive page with dummy data

--- a/src/components/guide/guide.html
+++ b/src/components/guide/guide.html
@@ -1,4 +1,4 @@
-<div (click)="goToGuide">
-  <img src="{{img}}" />
-  <div padding>{{title}}</div>
+<div (click)="goToGuide(data)">
+  <img src="{{data.img}}" />
+  <div padding>{{data.title}}</div>
 </div>
