add guides template

--- a/src/components/guide/guide.html
+++ b/src/components/guide/guide.html
@@ -1,4 +1,4 @@
 <div (click)="goToGuide(data)">
-  <img src="{{data.img}}" />
+  <img src="{{data.featureImg}}" />
   <div padding>{{data.title}}</div>
 </div>
