--- a/src/components/brewery-list-full/brewery-list-full.html
+++ b/src/components/brewery-list-full/brewery-list-full.html
@@ -1,7 +1,7 @@
 <div *ngIf="breweries">
   <div *ngFor="let brewery of data" (click)="goToBrewery(brewery.id)" padding>
     <img src="{{brewery.img}}" />
-    <h3>{{brewery.name}}</h3>
+    <h3>{{brewery.name | cleanentities}}</h3>
     <div>{{brewery.breweryAddress}}</div>
     <div>{{distance.getDistance(brewery.latitude, brewery.longitude)}} miles</div>
     <div *ngIf="brewery.breweryHours">Open today {{brewery.breweryHours | todayshours}}</div>
