--- a/src/pages/brewery/brewery.scss
+++ b/src/pages/brewery/brewery.scss
@@ -71,7 +71,7 @@ button.brewery-info {
   background-color: #D8D8D8;
   &:after {
     content: '';
-    background-image: url('/assets/img/starmask.svg');
+    background-image: url('https://d6fie5tbv83w2.cloudfront.net/assets/2017/01/29223312/starmask.svg');
     background-size: cover;
     position: absolute;
     top: -1px;
