--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,7 +28,9 @@ $colors: (
   secondary:  #CFB392,
   danger:     #DE6473,
   light:      #CFB392,
-  dark:       #23221e
+  medium:     #B8B8B8,
+  dark:       #23221e,
+  white:      #FFFFFF
 );
 
 
