--- a/src/pages/splash/splash.scss
+++ b/src/pages/splash/splash.scss
@@ -1,6 +1,6 @@
 page-splash {
   ion-content {
-    background-image: url('assets/img/splash.jpg');
+    background-image: url('https://d6fie5tbv83w2.cloudfront.net/assets/2017/01/10225527/splash.jpg');
     background-size: cover;
   }
   + page-tabs .tabbar {
