--- a/src/pages/rating/rating.scss
+++ b/src/pages/rating/rating.scss
@@ -23,7 +23,7 @@ page-rating {
   }
   &:after {
     content: '';
-    background-image: url('/assets/img/starmask.svg');
+    background-image: url('https://d6fie5tbv83w2.cloudfront.net/assets/2017/01/29223312/starmask.svg');
     background-size: cover;
     top: -2px;
     right: -2px;
