--- a/src/components/avatar-upload/avatar-upload.scss
+++ b/src/components/avatar-upload/avatar-upload.scss
@@ -10,6 +10,7 @@ avatar-upload {
     width: 60px;
     height: 60px;
     margin: 0 10px 0 0;
+    background: map-get($colors, medium);
   }
   .avatar-options {
     a {
