--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -118,6 +118,17 @@ gopc-ad {
   .scroll-content {
     padding:0!important;
   }
+  .scroll-zoom-wrapper {
+    height: 100%;
+  }
+  img {
+    height: 100%;
+    width: auto;
+    margin-left: 2px;
+    &:first-of-type {
+      margin: 0;
+    }
+  }
 }
 
 .icon-avatar {
